# MRJP-kompilator

./: .gitignore  Latte.cabal  README.md  TODO.md  build  build.sh  makefile  test.sh  test_good.sh
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
lattests/arrays1/: array000.lat
lattests/bad/: bad029.lat  bad030.lat  bad032.lat
lattests/good/: core035.lat  core040.output
lattests/good/arrays1/: array003.lat  array003.output
lattests/good/core/: core036.lat  core037.lat  core038.lat  core039.lat  core040.lat  core040.output
lattests/good/objects2/: jobs.lat  nested.lat
lattests/struct/: struct000.lat  struct001.lat
src/: Common.hs  Compiler.hs  InfoDigger.hs  Insc_llvm.hs  Latte.cf  Llvm.hs  Main.hs  Makefile  Run.hs  RunLlvm.hs  TypeChecker.hs
src/Instant/: Lex.hs
src/Latte/: Abs.hs  Abs.hs.bak  Doc.txt  Doc.txt.bak  Lex.x  Lex.x.bak  Par.y  Par.y.bak  Print.hs  Print.hs.bak  Skel.hs  Skel.hs.bak  Test.hs.bak
