cabal-version:      2.4
name:               Latte
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Kapiszon2343
maintainer:         harasimowiczk@wp.pl

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable latc_x86_64
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Latte.Abs, Latte.Lex, Latte.Par, Latte.Print, Latte.Skel, Compiler, Run, Common, TypeChecker, InfoDigger

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, array, mtl, containers, process, filepath, bytestring, Cabal-syntax
    hs-source-dirs:   src
    default-language: Haskell2010